--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,28 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+  <link rel="author" href="humans.txt">
+
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" rel="shortcut icon" href="/img/favicon.ico">
+
   <title>CSESoc UNSW</title>
 
-  <link rel="preload" as="style"
-    href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="preload" as="style"
     href="https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap">
   <link rel="preload" as="style"
     href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+  <link rel="preload" as="style"
+    href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net/">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link defer rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 
